--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -16,12 +16,12 @@
         app:srcCompat="@drawable/starsuckslogo" />
 
     <TextView
-        android:id="@+id/You_ordered_label"
-        android:layout_width="160dp"
-        android:layout_height="37dp"
+        android:id="@+id/Your_order"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0"
-        android:text="@string/You_ordered_label"
+        android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/starsucksGreen"
         android:textSize="24sp" />
@@ -33,7 +33,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imgOrderedBev"
             android:layout_width="wrap_content"
             android:layout_height="86dp"
             android:layout_gravity="center_horizontal"
